--- a/public/index.html
+++ b/public/index.html
@@ -29,5 +29,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+    <!-- Javascript -->
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
